--- a/references.bib
+++ b/references.bib
@@ -995,3 +995,22 @@
 }
 
 
+@article{wilke_biology_2002,
+	title = {The biology of digital organisms},
+	volume = {17},
+	issn = {01695347},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0169534702026125},
+	doi = {10.1016/S0169-5347(02)02612-5},
+	language = {english},
+	number = {11},
+	urldate = {2019-08-27},
+	journal = {Trends in Ecology \& Evolution},
+	author = {Wilke, Claus O. and Adami, Christoph},
+	month = nov,
+	year = {2002},
+	pages = {528--532},
+	file = {Wilke_Adami_2002_The_biology_of_digital_organisms.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Wilke_Adami_2002_The_biology_of_digital_organisms.pdf:application/pdf}
+}
+
+
+
