--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -13,6 +13,17 @@
 % --- Deleterious genes ----
 %%%%%%%%%%%
 
+%%%%%%%%%
+% Text to work in:
+
+% -- coalescence times --
+% In asexual populations without ecological interactions fostering coexistence, phylogenies should coalesce periodically; that is, the most recent common ancestor shared by the extant population should change.
+% The rate that these coalescence events occur can indicate the strength of selection.
+% For example, populations under strong selective pressures should experience more rapid coalescence events than populations under weaker selection \citep{dolson_interpreting_2020}.
+
+
+%%%%%%%%%
+
 % @AML: This section is missing empirical examples.
 \section{Discussion}
 
@@ -80,6 +91,8 @@ Additionally, we imposed no explicit costs on phenotypic plasticity, which minim
 
 \vspace{0.25cm}
 \subsection{Adaptively plastic populations retain more novel traits than non-plastic populations in fluctuating environments}
+
+% @AML: todo - make sure to work in that co-occurring trait loss could be a result of non-plastic orgs repurposing traits
 
 % -- overview --
 % - Exploration -
