--- a/tex/figures/architecture_locus_functionality.tex
+++ b/tex/figures/architecture_locus_functionality.tex
@@ -6,6 +6,7 @@
     \textbf{todo title.}
     Representative samples from each condition at the end of phase two. 
     The 100-loci genome of each sample is shown, with colors indicating what functionality a locus has for each of the six base tasks. 
+    % ENV-A is on the left of the black line (for future reference in writing this)
     % STATIC replicates typic
     }
     \label{fig:architecture_locus_functionality}
