--- a/tex/figures/evolutionary-change-panel.tex
+++ b/tex/figures/evolutionary-change-panel.tex
@@ -5,7 +5,7 @@
     \includegraphics[width=1\textwidth]{media/evolutionary-change-full-panel.pdf}
     \caption{\small
     \textbf{todo title.}
-    todo.
+    [Adaptive phenotypic plasticity evolved in \evolutionaryChangeRatePlasticReps\ of \evolutionaryChangeRateReplicates\ replicates from the PLASTIC treatment during phase one of this experiment; we used this more limited group to found the \evolutionaryChangeRatePlasticReps\ phase-two PLASTIC replicates from which we report these PLASTIC data.]
     }
     \label{fig:evolutionary-dynamics}
 \end{figure}
