--- a/tex/figures/novel-tasks-panel.tex
+++ b/tex/figures/novel-tasks-panel.tex
@@ -3,7 +3,7 @@
     \includegraphics[width=0.9\textwidth]{media/complex-traits-panel.pdf}
     \caption{\small
     \textbf{todo title.}
-    todo.
+    [Adaptive phenotypic plasticity evolved in \novelTraitsPlasticReps\ of \novelTraitsReplicates\ replicates from the PLASTIC treatment during phase one of Experiment II; we used this more limited group to seed the \novelTraitsPlasticReps\ phase-two PLASTIC replicates.]
     }
     \label{fig:complex-traits}
 \end{figure}
