--- a/tex/figures/poison-accumulation-panel.tex
+++ b/tex/figures/poison-accumulation-panel.tex
@@ -3,7 +3,7 @@
     \includegraphics[width=1.0\textwidth]{media/poison-accumulation-panel.pdf}
     \caption{\small
     \textbf{todo title.}
-    todo.
+    [Adaptive phenotypic plasticity evolved in \deleteriousHitchhikingPlasticReps\ of \deleteriousHitchhikingReplicates\ replicates from the PLASTIC treatment during phase one of Experiment III; we used this more limited group to seed the \deleteriousHitchhikingPlasticReps\ phase-two PLASTIC replicates.] [...].
     }
     \label{fig:deleterious-hitchhiking}
 \end{figure}
