--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -62,7 +62,7 @@ Genetic and environmental contexts determine if and to what extent phenotypic pl
 Experimental studies investigating the relationship between phenotypic plasticity and evolutionary outcomes can be challenging to conduct in natural systems.
 Such experiments would require the ability to irreversibly toggle plasticity followed by long periods of evolution during which detailed phenotypic data would need to be collected.
 Digital evolution experiments have emerged as a powerful research framework from which evolution can be studied.
-In digital evolution, self-replicating computer programs (digital organisms) compete for resources, mutate, and evolve following Darwinian dynamics  \citep{mckinley_harnessing_2008}.
+In digital evolution, self-replicating computer programs (digital organisms) compete for resources, mutate, and evolve following Darwinian dynamics  \citep{wilke_biology_2002}.
 Digital evolution studies balance the speed and transparency of mathematical and computational simulations with the open-ended realism of laboratory experiments.
 Modern computers allow us to observe many generations of digital evolution at tractable time scales; thousands of generations can take mere minutes as opposed to months, years, or centuries.
 Digital evolution systems also allow for perfect, non-invasive data tracking.
@@ -84,13 +84,13 @@ and the origins of reproductive division of labor \citep{goldsby_evolutionary_20
 % @AML: next bit is a little awkward
 Our experiments build directly on previous studies in Avida that characterized the \textit{de novo} evolution of adaptive phenotypic plasticity \citep{clune_investigating_2007,lalejini_evolutionary_2016} and studies that characterized the evolutionary consequences of fluctuating environments for populations of non-plastic digital organisms \citep{wilke_evolution_2001,canino-koning_fluctuating_2019}.
 Of particular relevance, \cite{clune_investigating_2007} and \cite{lalejini_evolutionary_2016} experimentally demonstrated that adaptive phenotypic plasticity can evolve given the following four conditions (as identified by \cite{ghalambor_behavior_2010}):
-(1) populations experience temporal environmental variation,
+(1) populations experience temporal environmental variation (i.e., a fluctuating environment),
 (2) these environments are differentiable by reliable cues,
 (3) each environment favors different phenotypic traits,
 and (4) no single phenotype exhibits high fitness across all environments.
 % \cite{wilke_evolution_2001}....
 % \cite{canino-koning_evolution_2016}....
-We build on this previous work but shift our focus from the evolutionary causes of adaptive phenotypic plasticity to investigate its evolutionary consequences in a fluctuating environment.
+We build on this previous work, but shift our focus from the evolutionary causes of adaptive phenotypic plasticity to investigate its evolutionary consequences in a fluctuating environment.
 
 % Here, we empirically investigate how adaptive phenotypic plasticity affects subsequent evolutionary dynamics in a fluctuating environment.
 %%%%%%%%%%%%%%%%%
@@ -100,7 +100,7 @@ Each of our experiments are divided into two phases: in phase one, we preconditi
 in phase two, we examine the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions [figure].
 First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
 Next, we evaluate how adaptive plasticity influences fitness landscape exploration and exploitation by identifying how well populations produced by each type of founder are able to evolve and retain novel adaptive traits.
-Finally, we test whether adaptive plasticity facilitated the accumulation of deleterious genes via cryptic genetic variation by measuring the frequency with which deleterious mutations occur along successful lineages. 
+Finally, we examine lineages to determine whether adaptive plasticity facilitated the accumulation of cryptic genetic variation that would prove deleterious when the environment changed. %initially unexpressed deleterious genes via cryptic genetic variation by measuring the frequency with which deleterious mutations occur along successful lineages. 
 % [Finally we examine the frequency with which deleterious mutations occur along successful lineages in each type of population in order to understand how and why different types of plasticity allow or prevent].
 
 %%%%%%%%%%%%%%%%%%%%%%
